# tinyvecdb

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
apps/tinyvecdb_cli/: CMakeLists.txt
apps/tinyvecdb_server/: CMakeLists.txt
apps/tinyvecdb_server/src/: main.cpp
cmake/: tinyvecdbConfig.cmake.in  version.h.in
include/: tinyvecdb.h  vector_store.h
include/tinyvecdb/: error.h  executor.h  tinyvecdb.h  types.h
src/: CMakeLists.txt  tinyvecdb.cpp  vector_store.cpp
src/core/: CMakeLists.txt  tinyvecdb.cpp
src/util/: CMakeLists.txt  shared_thread_pool.cpp  shared_thread_pool.h
tests/: CMakeLists.txt  basic_smoke.cpp
tests/unit/util/: test_shared_thread_pool.cpp
